# pulsodoro

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/plans/: 2026-02-27-anime-pomodoro-design.md  2026-02-27-anime-pomodoro.md  2026-02-27-animedoro-v2-design.md  2026-02-27-animedoro-v2-plan.md  2026-03-04-settings-tabs-tidal-ux-design.md  2026-03-04-settings-tabs-tidal-ux.md  2026-03-04-tidal-embed-player-design.md  2026-03-04-tidal-embed-player.md  2026-03-04-tidal-integration-design.md  2026-03-04-tidal-integration.md  2026-03-04-tidal-pake-style-design.md  2026-03-04-tidal-pake-style-plan.md  2026-03-08-themes-settings-redesign-design.md  2026-03-08-themes-settings-redesign.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: main.dart
mobile/lib/models/: settings.dart  stats.dart  timer_state.dart
mobile/lib/screens/: settings_screen.dart  stats_screen.dart  timer_screen.dart
mobile/lib/services/: audio_service.dart  foreground_service.dart  notification_service.dart  settings_service.dart  stats_service.dart  timer_service.dart
mobile/lib/theme/: app_theme.dart  tokens.dart
mobile/test/: widget_test.dart
src/: avatar.js  main.js  styles.css  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gamification.rs  lib.rs  main.rs  settings.rs  stats.rs  timer.rs  wallpaper_manager.rs
src/avatars/: cat.js  dog.js  panda.js  shared.js  turtle.js  types.js
(+12 files in other folders)
