[package]
name = "pulsodoro"
version = "0.2.0"
edition = "2021"

[lib]
name = "pulsodoro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3"
dirs = "6"
tauri-plugin-dialog = "2"
base64 = "0.22"
