[package]
name = "pulsodoro"
version = "0.7.1"
edition = "2021"

[lib]
name = "pulsodoro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3"
dirs = "6"
tauri-plugin-dialog = "2"
base64 = "0.22"
chrono = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
